--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
->
-
-    <application
-            android:allowBackup="true"
-            android:fullBackupContent="@xml/backup_rules"
-            tools:targetApi="31"
-            android:dataExtractionRules="@xml/data_extraction_rules"
-            android:label="@string/app_name"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.Xczutil"/>
-
+   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools">
+       <application
+           android:allowBackup="true"
+           android:fullBackupContent="@xml/backup_rules"
+           tools:targetApi="31"
+           android:dataExtractionRules="@xml/data_extraction_rules"
+           android:label="@string/app_name"
+           android:icon="@mipmap/ic_launcher"
+           android:roundIcon="@mipmap/ic_launcher_round"
+           android:supportsRtl="true"
+           android:theme="@style/Theme.Xczutil">
+           <activity
+               android:name=".MainActivity"
+               android:exported="true" 
+               tools:ignore="WrongManifestParent">
+               <intent-filter>
+                   <action android:name="android.intent.action.MAIN"/>
+                   <category android:name="android.intent.category.LAUNCHER"/>
+               </intent-filter>
+           </activity>
+       </application>
 </manifest>
+   
